--- a/assignment 3.html
+++ b/assignment 3.html
@@ -24,13 +24,12 @@
 	<input type ="radio" id="female" name="gender" value="female">female</input><br><br>
 	Qualification:<br>
 	<select name="qualification">
-		<option label="--select--" value=""></option>
-		<option label="developer" value="dev"></option>
+		<option value="">--select--</option>
 	<select/><br><br>
 	
 	Experience:<br>
 	<select name="Experience">
-		<option label="--select--" value=""></option>
+		<option label value="">--select--</option>
 		<option label="1yr" value="1"></option>
 	<select/><br><br>
 	Coding Languages:<br>
